<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvStartMoney"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_money"
            android:layout_margin="5dp"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tvWinMoney"/>

        <TextView
            android:id="@+id/tvWinMoney"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_money"
            android:layout_margin="5dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvStartMoney"
            app:layout_constraintEnd_toStartOf="@+id/tvTaxScale"/>

        <TextView
            android:id="@+id/tvTaxScale"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tax_scale"
            android:layout_margin="5dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/tvWinMoney"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvJailMaxTurns"/>

        <TextView
            android:id="@+id/tvJailMaxTurns"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_turns_nin_jail"
            android:layout_margin="5dp"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/tvTaxScale"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/tvBarrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tvJailMaxTurns,tvStartMoney,tvTaxScale,tvWinMoney"/>

        <cc.lib.android.CCNumberPicker
            android:id="@+id/npStartMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvBarrier"
            app:layout_constraintStart_toStartOf="@id/tvStartMoney"
            app:layout_constraintEnd_toEndOf="@id/tvStartMoney" />

        <cc.lib.android.CCNumberPicker
            android:id="@+id/npWinMoney"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvBarrier"
            app:layout_constraintStart_toStartOf="@id/tvWinMoney"
            app:layout_constraintEnd_toEndOf="@id/tvWinMoney"/>

        <cc.lib.android.CCNumberPicker
            android:id="@+id/npTaxScale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvBarrier"
            app:layout_constraintStart_toStartOf="@id/tvTaxScale"
            app:layout_constraintEnd_toEndOf="@id/tvTaxScale"/>

        <cc.lib.android.CCNumberPicker
            android:id="@+id/npJailMaxTurns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/tvBarrier"
            app:layout_constraintStart_toStartOf="@id/tvJailMaxTurns"
            app:layout_constraintEnd_toEndOf="@id/tvJailMaxTurns"/>

        <CheckBox
            android:text="@string/jail_bump_enabled"
            android:id="@+id/cbJailBumpEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/npStartMoney"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <CheckBox
            android:text="@string/jail_multiplier_enabled"
            android:id="@+id/cbJailMultiplierEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/cbJailBumpEnabled"
            app:layout_constraintStart_toEndOf="@id/cbJailBumpEnabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <CheckBox
            android:text="@string/doubles_rule_enabled"
            android:id="@+id/cbDoublesRuleEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            app:layout_constraintTop_toBottomOf="@id/cbJailMultiplierEnabled"
            app:layout_constraintStart_toEndOf="@id/cbJailMultiplierEnabled"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>